--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ mkdocs = "^1.5.3"
 mkdocs-material = "^9.4.14"
 mkdocstrings = "^0.24.0"
 mkdocstrings-python = "^1.7.5"
+tomlkit = "^0.12.3"
+testcontainers = "^3.7.1"
+aiohttp = "^3.9.1"
+pytest-asyncio = "^0.23.2"
 
 
 [tool.poetry.group.infra.dependencies]
@@ -52,7 +56,9 @@ select = [
     "S", # flake8-bandit
     "C90", #mccabe
 ]
-ignore = []
+ignore = [
+  "S101", # Warns against the use of assert not helpful when using pytest 
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -75,10 +81,12 @@ import_heading_thirdparty = "Third Party"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-s -vvv --color=yes"
+addopts = "-s --color=yes --strict-markers --ignore=cdk"
+asyncio_mode = "auto"
+markers = ["docker", "asyncio"]
 
 [tool.coverage.run]
-omit = ["tests/*", "**/__init__.py", "tasks.py"]
+omit = ["tests/*", "cdk/*", "**/__init__.py", "tasks.py"]
 branch = true
 
 [tool.mypy]
@@ -87,7 +95,8 @@ show_error_codes = true
 show_column_numbers = true
 show_error_context = true
 exclude = [
-  'tests/'
+  'tests/',
+  'cdk/'
 ]
 follow_imports = 'silent'
 ignore_missing_imports = true
