Updated how mkdocs works

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,17 @@
 site_name: example-dbt-airflow
+
 theme:
   name: material
+
 plugins:
-- search
-- mkdocstrings:
+- search  
+- gen-files: # Generate distinct docs pages per source code file.
+    scripts:
+    - scripts/mkdocs/gen_ref_pages.py  
+- literate-nav:
+    nav_file: SUMMARY.md
+- section-index
+- mkdocstrings: # Generate documentation from source code.
     default_handler: python
     handlers:
       python:
@@ -22,3 +30,7 @@ plugins:
           show_signature: true
           separate_signature: true
           show_signature_annotations: true
+
+nav:
+# defer to gen-files + literate-nav
+- Code Reference: reference/  
