--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,6 @@ pytest-randomly = "^3.15.0"
 md-toc = "^8.2.2"
 isort = "^5.12.0"
 invoke = "^2.2.0"
-mkdocs = "^1.5.3"
-mkdocs-material = "^9.4.14"
-mkdocstrings = "^0.24.0"
-mkdocstrings-python = "^1.7.5"
 tomlkit = "^0.12.3"
 testcontainers = "^3.7.1"
 aiohttp = "^3.9.1"
@@ -31,6 +27,16 @@ pytest-asyncio = "^0.23.2"
 [tool.poetry.group.infra.dependencies]
 boto3 = "^1.33.8"
 aws-cdk-lib = "^2.114.1"
+
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+mkdocs-material = "^9.5.2"
+mkdocstrings = "^0.24.0"
+mkdocstrings-python = "^1.7.5"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.8"
 
 [build-system]
 requires = ["poetry-core"]
