--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,20 @@
 site_name: example-dbt-airflow
+site_url: https://example-dbt-airflow.github.io/
 
 theme:
   name: material
 
 plugins:
 - search  
+- git-authors
+- git-revision-date-localized
+
+# Blogging
+- blogging:
+    dirs: # The directories to be included
+      - blog
+
+# Auto Documentation From Code      
 - gen-files: # Generate distinct docs pages per source code file.
     scripts:
     - scripts/mkdocs/gen_ref_pages.py  
@@ -31,6 +41,22 @@ plugins:
           separate_signature: true
           show_signature_annotations: true
 
+# Swagger OpenAPI doc generation
+- render_swagger
+
+# Science and Engineering
+- plotly
+- drawio-exporter
+- mkdocs-jupyter
+
+
+
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: plotly
+          class: mkdocs-plotly
+          format: !!python/name:mkdocs_plotly_plugin.fences.fence_plotly
 nav:
-# defer to gen-files + literate-nav
+- 'index.md'
 - Code Reference: reference/  
