--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,13 @@ mkdocstrings-python = "^1.7.5"
 mkdocs-gen-files = "^0.5.0"
 mkdocs-literate-nav = "^0.6.1"
 mkdocs-section-index = "^0.3.8"
+mkdocs-plotly-plugin = "^0.1.3"
+mkdocs-blogging-plugin = "^2.2.11"
+mkdocs-drawio-exporter = "^0.8.0"
+mkdocs-git-revision-date-localized-plugin = "^1.2.1"
+mkdocs-git-authors-plugin = "^0.7.2"
+mkdocs-render-swagger-plugin = "^0.1.1"
+mkdocs-jupyter = "^0.24.6"
 
 [build-system]
 requires = ["poetry-core"]
